--- a/film.html
+++ b/film.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="cs">
 	<head>
+		<script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Detail | FilmBox</title>
@@ -119,6 +120,7 @@
 												class="form-control"
 												id="message-input"
 												rows="4"
+												placeholder="Zadejte text poznámky"
 											></textarea>
 											<label class="form-label" for="message-input"
 												>Text poznámky</label
