--- a/film.html
+++ b/film.html
@@ -73,7 +73,7 @@
 								>
 							</p>
 							<h6>Hodnocení</h6>
-							<div class="stars">
+							<div class="stars" id="stars">
 								<button
 									class="far fa-star button-star"
 									data-mdb-toggle="tooltip"
