--- a/seznam.html
+++ b/seznam.html
@@ -14,6 +14,10 @@
 			rel="stylesheet"
 		/>
 		<link
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+			rel="stylesheet"
+		>
+		<link
 			href="mdb5-standard-UI-kit-free-6.0.1/css/mdb.min.css"
 			rel="stylesheet"
 		/>
